wordseq work in progress

--- a/code/feature_extraction_dl_word2vec.ipynb
+++ b/code/feature_extraction_dl_word2vec.ipynb
@@ -250,6 +250,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "       id  4019  4280  42731  41401  5849  25000  2724  51881  5990  \\\n",
+      "0  117760     0     0      0      0     0      0     0      1     0   \n",
+      "1  129030     1     0      0      0     0      0     1      0     0   \n",
+      "2  172040     0     0      0      1     1      0     0      0     0   \n",
+      "3  156170     0     1      1      0     1      1     0      0     0   \n",
+      "4  199180     0     1      0      1     0      1     0      0     0   \n",
+      "\n",
+      "                         ...                          c511  c412  c707  c348  \\\n",
+      "0                        ...                             0     0     0     0   \n",
+      "1                        ...                             0     0     0     0   \n",
+      "2                        ...                             0     0     0     0   \n",
+      "3                        ...                             0     0     0     0   \n",
+      "4                        ...                             0     0     0     0   \n",
+      "\n",
+      "   c765  cE88  c571  c300  c733  \\\n",
+      "0     0     0     0     0     0   \n",
+      "1     0     0     0     0     0   \n",
+      "2     0     0     0     0     0   \n",
+      "3     0     0     0     0     0   \n",
+      "4     0     0     0     0     0   \n",
+      "\n",
+      "                                                text  \n",
+      "0  admission date discharge date date birth sex s...  \n",
+      "1  admission date discharge date date birth sex s...  \n",
+      "2  admission date discharge date service medicine...  \n",
+      "3  admission date discharge date service medicine...  \n",
+      "4  admission date discharge date service ccu hist...  \n",
+      "\n",
+      "[5 rows x 102 columns]\n",
+      "715.766851269\n",
+      "Found 117328 unique tokens.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"./data/DATA_HADM_CLEANED.csv\", escapechar='\\\\')\n",
+    "print df.head()\n",
+    "\n",
+    "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df.copy(), max_sequence_len=1500)\n",
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10.p\", ICD9CODES_TOP10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Found 33837 word vectors.\n",
       "Found 29939 word vectors.\n",
       "Found 29939 word vectors.\n",
@@ -259,13 +312,13 @@
    ],
    "source": [
     "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec.txt\", remove_stopwords=True)\n",
-    "output_pickle(em, \"./data/EMBMATRIX_WORD2VEC.p\")\n",
+    "output_pickle(em, \"./data/EMBMATRIXV1_WORD2VEC.p\")\n",
     "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_100dim.txt\", remove_stopwords=True)\n",
-    "output_pickle(em, \"./data/EMBMATRIX_WORD2VEC_v2_100dim.p\")\n",
+    "output_pickle(em, \"./data/EMBMATRIXV1_WORD2VEC_v2_100dim.p\")\n",
     "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_300dim.txt\", remove_stopwords=True)\n",
-    "output_pickle(em, \"./data/EMBMATRIX_WORD2VEC_v2_300dim.p\")\n",
+    "output_pickle(em, \"./data/EMBMATRIXV1_WORD2VEC_v2_300dim.p\")\n",
     "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_600dim.txt\", remove_stopwords=True)\n",
-    "output_pickle(em, \"./data/EMBMATRIX_WORD2VEC_v2_600dim.p\")"
+    "output_pickle(em, \"./data/EMBMATRIXV1_WORD2VEC_v2_600dim.p\")"
    ]
   },
   {
@@ -304,6 +357,45 @@
    ],
    "source": [
     "df = pd.read_csv(\"./data/DATA_HADM.csv\", escapechar='\\\\')\n",
+    "\n",
+    "texts = df['text'].apply(preprocessor_word2vec)\n",
+    "#texts = df['text']  # list of text samples\n",
+    "\n",
+    "toke = Tokenizer()\n",
+    "toke.fit_on_texts(texts)\n",
+    "sequence = toke.texts_to_sequences(texts)\n",
+    "\n",
+    "seq_len = [len(i) for i in sequence]\n",
+    "print np.mean(seq_len)\n",
+    "print np.median(seq_len)\n",
+    "print np.max(seq_len)\n",
+    "print np.min(seq_len)\n",
+    "print np.percentile(seq_len, 90)\n",
+    "print np.percentile(seq_len, 95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "715.766851269\n",
+      "648.0\n",
+      "5338\n",
+      "2\n",
+      "1376.0\n",
+      "1622.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"./data/DATA_HADM_CLEANED.csv\", escapechar='\\\\')\n",
     "\n",
     "texts = df['text'].apply(preprocessor_word2vec)\n",
     "#texts = df['text']  # list of text samples\n",
