--- a/code/feature_extraction_dl_word2vec.ipynb
+++ b/code/feature_extraction_dl_word2vec.ipynb
@@ -235,13 +235,43 @@
     "df = pd.read_csv(\"./data/DATA_HADM.csv\", escapechar='\\\\')\n",
     "print df.head()\n",
     "\n",
-    "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df.copy(), max_sequence_len=1000)\n",
-    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10.p\", ICD9CODES_TOP10)"
+    "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df.copy(), max_sequence_len=2000)\n",
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10.p\", ICD9CODES_TOP10)\n",
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10CAT.p\", ICD9CAT_TOP10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 33837 word vectors.\n",
+      "Found 29939 word vectors.\n",
+      "Found 29939 word vectors.\n",
+      "Found 29939 word vectors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec.txt\", remove_stopwords=True)\n",
+    "output_pickle(em, \"./data/EMBMATRIXV0_WORD2VEC.p\")\n",
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_100dim.txt\", remove_stopwords=True)\n",
+    "output_pickle(em, \"./data/EMBMATRIXV0_WORD2VEC_v2_100dim.p\")\n",
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_300dim.txt\", remove_stopwords=True)\n",
+    "output_pickle(em, \"./data/EMBMATRIXV0_WORD2VEC_v2_300dim.p\")\n",
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_600dim.txt\", remove_stopwords=True)\n",
+    "output_pickle(em, \"./data/EMBMATRIXV0_WORD2VEC_v2_600dim.p\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -289,12 +319,13 @@
     "print df.head()\n",
     "\n",
     "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df.copy(), max_sequence_len=1500)\n",
-    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10.p\", ICD9CODES_TOP10)"
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10.p\", ICD9CODES_TOP10)\n",
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10.p\", ICD9CAT_TOP10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +335,6 @@
      "output_type": "stream",
      "text": [
       "Found 33837 word vectors.\n",
-      "Found 29939 word vectors.\n",
       "Found 29939 word vectors.\n",
       "Found 29939 word vectors.\n"
      ]
@@ -337,24 +367,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1057.45596101\n",
-      "962.0\n",
-      "7944\n",
-      "3\n",
-      "2016.0\n",
-      "2393.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(\"./data/DATA_HADM.csv\", escapechar='\\\\')\n",
     "\n",
@@ -366,34 +383,21 @@
     "sequence = toke.texts_to_sequences(texts)\n",
     "\n",
     "seq_len = [len(i) for i in sequence]\n",
-    "print np.mean(seq_len)\n",
-    "print np.median(seq_len)\n",
-    "print np.max(seq_len)\n",
-    "print np.min(seq_len)\n",
-    "print np.percentile(seq_len, 90)\n",
-    "print np.percentile(seq_len, 95)"
+    "print \"mean: \", np.mean(seq_len)\n",
+    "print \"median: \", np.median(seq_len)\n",
+    "print \"max: \", np.max(seq_len)\n",
+    "print \"min: \", np.min(seq_len)\n",
+    "print \"90th percentile: \", np.percentile(seq_len, 90)\n",
+    "print \"95th percentile: \", np.percentile(seq_len, 95)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "715.766851269\n",
-      "648.0\n",
-      "5338\n",
-      "2\n",
-      "1376.0\n",
-      "1622.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(\"./data/DATA_HADM_CLEANED.csv\", escapechar='\\\\')\n",
     "\n",
@@ -405,12 +409,12 @@
     "sequence = toke.texts_to_sequences(texts)\n",
     "\n",
     "seq_len = [len(i) for i in sequence]\n",
-    "print np.mean(seq_len)\n",
-    "print np.median(seq_len)\n",
-    "print np.max(seq_len)\n",
-    "print np.min(seq_len)\n",
-    "print np.percentile(seq_len, 90)\n",
-    "print np.percentile(seq_len, 95)"
+    "print \"mean: \", np.mean(seq_len)\n",
+    "print \"median: \", np.median(seq_len)\n",
+    "print \"max: \", np.max(seq_len)\n",
+    "print \"min: \", np.min(seq_len)\n",
+    "print \"90th percentile: \", np.percentile(seq_len, 90)\n",
+    "print \"95th percentile: \", np.percentile(seq_len, 95)"
    ]
   },
   {
