--- a/code/feature_extraction_dl_word2vec.ipynb
+++ b/code/feature_extraction_dl_word2vec.ipynb
@@ -205,7 +205,7 @@
       "4  199180     0     1      0      1     0      1     0      0     0   \n",
       "\n",
       "                         ...                          c511  c412  c707  c348  \\\n",
-      "0                        ...                             0     0     0     0   \n",
+      "0                        ...                             0     0     0     1   \n",
       "1                        ...                             0     0     0     0   \n",
       "2                        ...                             0     0     0     0   \n",
       "3                        ...                             0     0     0     0   \n",
@@ -214,7 +214,7 @@
       "   c765  cE88  c571  c300  c733  \\\n",
       "0     0     0     0     0     0   \n",
       "1     0     0     0     0     0   \n",
-      "2     0     0     0     0     0   \n",
+      "2     0     1     0     0     0   \n",
       "3     0     0     0     0     0   \n",
       "4     0     0     0     0     0   \n",
       "\n",
@@ -225,8 +225,7 @@
       "3  Admission Date:  [**2102-6-9**]              D...  \n",
       "4  Admission Date:  [**2164-7-2**]       Discharg...  \n",
       "\n",
-      "[5 rows x 102 columns]\n",
-      "1057.45596101\n",
+      "[5 rows x 102 columns]1057.45596101\n",
       "Found 117458 unique tokens.\n"
      ]
     }
@@ -236,6 +235,7 @@
     "print df.head()\n",
     "\n",
     "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df.copy(), max_sequence_len=2000)\n",
+    "output_pickle(word_index, \"./data/DATA_WORDSEQV0_WORDINDEX.p\")\n",
     "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10.p\", ICD9CODES_TOP10)\n",
     "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10CAT.p\", ICD9CAT_TOP10)"
    ]
@@ -319,13 +319,14 @@
     "print df.head()\n",
     "\n",
     "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df.copy(), max_sequence_len=1500)\n",
+    "output_pickle(word_index, \"./data/DATA_WORDSEQV1_WORDINDEX.p\")\n",
     "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10.p\", ICD9CODES_TOP10)\n",
-    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10.p\", ICD9CAT_TOP10)"
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10CAT.p\", ICD9CAT_TOP10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -335,6 +336,7 @@
      "output_type": "stream",
      "text": [
       "Found 33837 word vectors.\n",
+      "Found 29939 word vectors.\n",
       "Found 29939 word vectors.\n",
       "Found 29939 word vectors.\n"
      ]
@@ -367,11 +369,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean:  1057.45596101\n",
+      "median:  962.0\n",
+      "max:  7944\n",
+      "min:  3\n",
+      "90th percentile:  2016.0\n",
+      "95th percentile:  2393.0\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"./data/DATA_HADM.csv\", escapechar='\\\\')\n",
     "\n",
@@ -393,11 +408,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean:  715.766851269\n",
+      "median:  648.0\n",
+      "max:  5338\n",
+      "min:  2\n",
+      "90th percentile:  1376.0\n",
+      "95th percentile:  1622.0\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"./data/DATA_HADM_CLEANED.csv\", escapechar='\\\\')\n",
     "\n",
@@ -446,6 +474,52 @@
     "for obj in [train2, val2, test2]:\n",
     "    cPickle.dump(obj, f, protocol=cPickle.HIGHEST_PROTOCOL)\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   0    0    0 ...,  158  211  327]\n",
+      " [   0    0    0 ...,  392  432  421]\n",
+      " [  21 1547  605 ...,  939 1181  506]\n",
+      " [4268 1060   76 ...,  206   86  327]\n",
+      " [   0    0    0 ...,  889 1204 1362]]\n",
+      "[[0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cPickle\n",
+    "\n",
+    "datafile = \"./data/DATA_WORDSEQV1_HADM_TOP10CAT.p\"\n",
+    "f = open(datafile, 'rb')\n",
+    "loaded_data = []\n",
+    "for i in range(7): # [reverse_dictionary, train_sequence, test_sequence, train_label, test_label]:\n",
+    "    loaded_data.append(cPickle.load(f))\n",
+    "f.close()\n",
+    "\n",
+    "dictionary = loaded_data[0]\n",
+    "train_sequence = loaded_data[1]\n",
+    "val_sequence = loaded_data[2]\n",
+    "test_sequence = loaded_data[3]\n",
+    "train_label = loaded_data[4]\n",
+    "val_label = loaded_data[5]\n",
+    "test_label = loaded_data[6]\n",
+    "\n",
+    "print train_sequence[:5,:]\n",
+    "print train_label[:5,:]"
    ]
   },
   {
