deep learning and ml baseline prep (fix)

--- a/code/feature_extraction_dl_word2vec.ipynb
+++ b/code/feature_extraction_dl_word2vec.ipynb
@@ -225,7 +225,8 @@
       "3  Admission Date:  [**2102-6-9**]              D...  \n",
       "4  Admission Date:  [**2164-7-2**]       Discharg...  \n",
       "\n",
-      "[5 rows x 102 columns]1057.45596101\n",
+      "[5 rows x 102 columns]\n",
+      "1057.45596101\n",
       "Found 117458 unique tokens.\n"
      ]
     }
@@ -237,7 +238,9 @@
     "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df.copy(), max_sequence_len=2000)\n",
     "output_pickle(word_index, \"./data/DATA_WORDSEQV0_WORDINDEX.p\")\n",
     "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10.p\", ICD9CODES_TOP10)\n",
-    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10CAT.p\", ICD9CAT_TOP10)"
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP50.p\", ICD9CODES_TOP50)\n",
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10CAT.p\", ICD9CAT_TOP10)\n",
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP50CAT.p\", ICD9CAT_TOP50)"
    ]
   },
   {
@@ -288,7 +291,7 @@
       "4  199180     0     1      0      1     0      1     0      0     0   \n",
       "\n",
       "                         ...                          c511  c412  c707  c348  \\\n",
-      "0                        ...                             0     0     0     0   \n",
+      "0                        ...                             0     0     0     1   \n",
       "1                        ...                             0     0     0     0   \n",
       "2                        ...                             0     0     0     0   \n",
       "3                        ...                             0     0     0     0   \n",
@@ -297,7 +300,7 @@
       "   c765  cE88  c571  c300  c733  \\\n",
       "0     0     0     0     0     0   \n",
       "1     0     0     0     0     0   \n",
-      "2     0     0     0     0     0   \n",
+      "2     0     1     0     0     0   \n",
       "3     0     0     0     0     0   \n",
       "4     0     0     0     0     0   \n",
       "\n",
@@ -321,7 +324,9 @@
     "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df.copy(), max_sequence_len=1500)\n",
     "output_pickle(word_index, \"./data/DATA_WORDSEQV1_WORDINDEX.p\")\n",
     "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10.p\", ICD9CODES_TOP10)\n",
-    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10CAT.p\", ICD9CAT_TOP10)"
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP50.p\", ICD9CODES_TOP50)\n",
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP10CAT.p\", ICD9CAT_TOP10)\n",
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV1_HADM_TOP50CAT.p\", ICD9CAT_TOP50)"
    ]
   },
   {
