--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -269,7 +269,7 @@
     "    df_val = read_csv(\"{0}_val.csv\".format(input_name))\n",
     "    df_test = read_csv(\"{0}_test.csv\".format(input_name))\n",
     "\n",
-    "    df_train = df_train.union(df_val)\n",
+    "    #df_train = df_train.union(df_val)\n",
     "    \n",
     "    df_train.cache()\n",
     "    df_test.cache()\n",
@@ -300,12 +300,12 @@
    },
    "outputs": [],
    "source": [
-    "def run_experiment2(input_name):\n",
+    "def run_experiment2(input_name, depths=[5, 10, 20, 30]):\n",
     "    df_train = read_csv(\"{0}_train.csv\".format(input_name))\n",
     "    df_val = read_csv(\"{0}_val.csv\".format(input_name))\n",
     "    df_test = read_csv(\"{0}_test.csv\".format(input_name))\n",
     "\n",
-    "    df_train = df_train.union(df_val)\n",
+    "    #df_train = df_train.union(df_val)\n",
     "    \n",
     "    df_train.cache()\n",
     "    df_test.cache()\n",
@@ -313,7 +313,7 @@
     "    print input_name\n",
     "    print \"Train, Test:\", df_train.count(), df_test.count()\n",
     "    print \"iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\"        \n",
-    "    for maxDepth in [5, 10, 20, 30]:\n",
+    "    for maxDepth in depths:\n",
     "        clr = CustomRandomForestClassifier()\n",
     "        clr.fit(df_train, maxDepth=maxDepth)\n",
     "        df_pred_train = clr.predict(df_train)\n",
@@ -340,146 +340,8 @@
      "output_type": "stream",
      "text": [
       "./data/DATA_TFIDFV0_HADM_TOP10\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.8678 & 0.4640 & 0.5905 & 0.8848 & 0.3809 & 0.6756 & 0.3032 & 0.4036 & 0.8417 & 0.2704 \\\\ \\hline\n",
-      "10 & 0.9602 & 0.8912 & 0.9241 & 0.9701 & 0.7916 & 0.5964 & 0.4561 & 0.5138 & 0.8411 & 0.2558 \\\\ \\hline\n",
-      "25 & 0.9998 & 0.9999 & 0.9999 & 0.9999 & 0.9991 & 0.5208 & 0.4554 & 0.4844 & 0.8206 & 0.2189 \\\\ \\hline\n",
-      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5165 & 0.4516 & 0.4804 & 0.8190 & 0.2176 \\\\ \\hline\n",
-      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5165 & 0.4515 & 0.4804 & 0.8190 & 0.2176 \\\\ \\hline\n",
-      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5165 & 0.4515 & 0.4804 & 0.8190 & 0.2176 \\\\ \\hline\n",
-      "./data/DATA_TFIDFV1_HADM_TOP10\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.8060 & 0.5491 & 0.6508 & 0.8915 & 0.3833 & 0.6689 & 0.4006 & 0.4977 & 0.8513 & 0.2847 \\\\ \\hline\n",
-      "10 & 0.9415 & 0.9169 & 0.9289 & 0.9711 & 0.7685 & 0.5805 & 0.4995 & 0.5358 & 0.8396 & 0.2607 \\\\ \\hline\n",
-      "25 & 0.9994 & 0.9994 & 0.9994 & 0.9996 & 0.9960 & 0.5050 & 0.4827 & 0.4933 & 0.8150 & 0.2108 \\\\ \\hline\n",
-      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.4976 & 0.4808 & 0.4889 & 0.8122 & 0.2073 \\\\ \\hline\n",
-      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.4974 & 0.4807 & 0.4887 & 0.8121 & 0.2069 \\\\ \\hline\n",
-      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.4974 & 0.4807 & 0.4887 & 0.8121 & 0.2069 \\\\ \\hline\n",
-      "./data/DATA_WORD2VEC_HADM_TOP10\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.5080 & 0.2077 & 0.2634 & 0.8255 & 0.2429 & 0.5061 & 0.2086 & 0.2632 & 0.8242 & 0.2400 \\\\ \\hline\n",
-      "10 & 0.5911 & 0.2475 & 0.3186 & 0.8329 & 0.2516 & 0.5678 & 0.2455 & 0.3151 & 0.8313 & 0.2458 \\\\ \\hline\n",
-      "25 & 0.6069 & 0.2688 & 0.3416 & 0.8364 & 0.2581 & 0.5759 & 0.2646 & 0.3352 & 0.8340 & 0.2519 \\\\ \\hline\n",
-      "50 & 0.6067 & 0.2685 & 0.3417 & 0.8365 & 0.2581 & 0.5770 & 0.2653 & 0.3363 & 0.8342 & 0.2525 \\\\ \\hline\n",
-      "75 & 0.6066 & 0.2689 & 0.3421 & 0.8364 & 0.2585 & 0.5773 & 0.2657 & 0.3371 & 0.8343 & 0.2530 \\\\ \\hline\n",
-      "100 & 0.6079 & 0.2689 & 0.3424 & 0.8365 & 0.2592 & 0.5777 & 0.2659 & 0.3374 & 0.8345 & 0.2536 \\\\ \\hline\n"
-     ]
-    }
-   ],
-   "source": [
-    "run_experiment(\"./data/DATA_TFIDFV0_HADM_TOP10\")\n",
-    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP10\")\n",
-    "run_experiment(\"./data/DATA_WORD2VEC_HADM_TOP10\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./data/DATA_TFIDFV0_HADM_TOP10\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.4722 & 0.0172 & 0.0324 & 0.8076 & 0.2329 & 0.3556 & 0.0166 & 0.0310 & 0.8062 & 0.2313 \\\\ \\hline\n",
-      "10 & 0.8717 & 0.1211 & 0.1952 & 0.8311 & 0.2566 & 0.6316 & 0.0842 & 0.1357 & 0.8201 & 0.2440 \\\\ \\hline\n",
-      "20 & 0.9924 & 0.3686 & 0.5038 & 0.8860 & 0.3940 & 0.7632 & 0.1571 & 0.2306 & 0.8316 & 0.2581 \\\\ \\hline\n",
-      "30 & 0.9974 & 0.5644 & 0.6957 & 0.9258 & 0.5583 & 0.7462 & 0.1931 & 0.2725 & 0.8366 & 0.2654 \\\\ \\hline\n",
-      "./data/DATA_TFIDFV1_HADM_TOP10\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.4706 & 0.0327 & 0.0568 & 0.8112 & 0.2356 & 0.4658 & 0.0321 & 0.0557 & 0.8099 & 0.2350 \\\\ \\hline\n",
-      "10 & 0.9710 & 0.1340 & 0.2075 & 0.8341 & 0.2613 & 0.6449 & 0.0999 & 0.1532 & 0.8236 & 0.2469 \\\\ \\hline\n",
-      "20 & 0.9939 & 0.4277 & 0.5658 & 0.8974 & 0.4252 & 0.7992 & 0.1806 & 0.2578 & 0.8369 & 0.2635 \\\\ \\hline\n",
-      "30 & 0.9984 & 0.6447 & 0.7642 & 0.9404 & 0.6229 & 0.7557 & 0.2234 & 0.3070 & 0.8421 & 0.2701 \\\\ \\hline\n",
-      "./data/DATA_WORD2VEC_HADM_TOP10\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.3841 & 0.0766 & 0.1107 & 0.8179 & 0.2414 & 0.3883 & 0.0743 & 0.1081 & 0.8163 & 0.2403 \\\\ \\hline\n",
-      "10 & 0.9258 & 0.2149 & 0.2990 & 0.8483 & 0.2905 & 0.5875 & 0.1438 & 0.2013 & 0.8253 & 0.2471 \\\\ \\hline\n",
-      "20 & 0.9993 & 0.9479 & 0.9724 & 0.9916 & 0.9309 & 0.5446 & 0.1923 & 0.2591 & 0.8236 & 0.2374 \\\\ \\hline\n",
-      "30 & 0.9999 & 0.9722 & 0.9858 & 0.9955 & 0.9642 & 0.5765 & 0.1758 & 0.2424 & 0.8233 & 0.2372 \\\\ \\hline\n"
-     ]
-    }
-   ],
-   "source": [
-    "run_experiment2(\"./data/DATA_TFIDFV0_HADM_TOP10\")\n",
-    "run_experiment2(\"./data/DATA_TFIDFV1_HADM_TOP10\")\n",
-    "run_experiment2(\"./data/DATA_WORD2VEC_HADM_TOP10\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./data/DATA_TFIDFV0_HADM_TOP50\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.9168 & 0.5288 & 0.6602 & 0.9525 & 0.2048 & 0.5437 & 0.2164 & 0.2915 & 0.9226 & 0.0914 \\\\ \\hline\n",
-      "10 & 0.9874 & 0.9350 & 0.9602 & 0.9908 & 0.7563 & 0.4502 & 0.3010 & 0.3555 & 0.9168 & 0.0853 \\\\ \\hline\n",
-      "25 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.9991 & 0.4008 & 0.2954 & 0.3354 & 0.9091 & 0.0702 \\\\ \\hline\n",
-      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3968 & 0.2955 & 0.3343 & 0.9084 & 0.0699 \\\\ \\hline\n",
-      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3968 & 0.2955 & 0.3343 & 0.9084 & 0.0699 \\\\ \\hline\n",
-      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3968 & 0.2955 & 0.3343 & 0.9084 & 0.0699 \\\\ \\hline\n",
-      "./data/DATA_TFIDFV1_HADM_TOP50\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.8538 & 0.6050 & 0.7031 & 0.9548 & 0.1902 & 0.5288 & 0.2812 & 0.3571 & 0.9233 & 0.0892 \\\\ \\hline\n",
-      "10 & 0.9779 & 0.9599 & 0.9687 & 0.9918 & 0.7148 & 0.4213 & 0.3355 & 0.3712 & 0.9127 & 0.0755 \\\\ \\hline\n",
-      "25 & 0.9999 & 0.9999 & 0.9999 & 0.9999 & 0.9960 & 0.3768 & 0.3254 & 0.3478 & 0.9034 & 0.0591 \\\\ \\hline\n",
-      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3715 & 0.3253 & 0.3456 & 0.9021 & 0.0576 \\\\ \\hline\n",
-      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3715 & 0.3253 & 0.3456 & 0.9021 & 0.0576 \\\\ \\hline\n",
-      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3715 & 0.3253 & 0.3456 & 0.9021 & 0.0576 \\\\ \\hline\n",
-      "./data/DATA_WORD2VEC_HADM_TOP50\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.3523 & 0.1036 & 0.1192 & 0.9189 & 0.0777 & 0.3528 & 0.1043 & 0.1189 & 0.9184 & 0.0787 \\\\ \\hline\n",
-      "10 & 0.4653 & 0.1264 & 0.1568 & 0.9208 & 0.0859 & 0.4233 & 0.1223 & 0.1512 & 0.9199 & 0.0812 \\\\ \\hline\n",
-      "25 & 0.4688 & 0.1394 & 0.1744 & 0.9218 & 0.0892 & 0.4363 & 0.1356 & 0.1696 & 0.9207 & 0.0878 \\\\ \\hline\n",
-      "50 & 0.4644 & 0.1401 & 0.1758 & 0.9218 & 0.0899 & 0.4523 & 0.1362 & 0.1710 & 0.9207 & 0.0882 \\\\ \\hline\n",
-      "75 & 0.4869 & 0.1403 & 0.1762 & 0.9218 & 0.0900 & 0.4509 & 0.1364 & 0.1716 & 0.9208 & 0.0882 \\\\ \\hline\n",
-      "100 & 0.4891 & 0.1403 & 0.1763 & 0.9219 & 0.0903 & 0.4494 & 0.1365 & 0.1715 & 0.9208 & 0.0888 \\\\ \\hline\n"
-     ]
-    }
-   ],
-   "source": [
-    "run_experiment(\"./data/DATA_TFIDFV0_HADM_TOP50\")\n",
-    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP50\")\n",
-    "run_experiment(\"./data/DATA_WORD2VEC_HADM_TOP50\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./data/DATA_WORD2VEC_HADM_TOP50\n",
-      "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.1249 & 0.0697 & 0.0711 & 0.9179 & 0.0885 & 0.1242 & 0.0668 & 0.0682 & 0.9170 & 0.0847 \\\\ \\hline\n",
-      "10 & 0.9739 & 0.1291 & 0.1643 & 0.9264 & 0.1245 & 0.2735 & 0.0830 & 0.0943 & 0.9189 & 0.0869 \\\\ \\hline\n",
-      "20 & 0.9992 & 0.9059 & 0.9491 & 0.9931 & 0.8116 & 0.4377 & 0.0951 & 0.1153 & 0.9188 & 0.0832 \\\\ \\hline\n"
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n"
      ]
     },
     {
@@ -487,17 +349,17 @@
       "text/plain": [
        "Name: org.apache.toree.interpreter.broker.BrokerException\n",
        "Message: Traceback (most recent call last):\n",
-       "  File \"/tmp/kernel-PySpark-3ebf5a31-8d2c-4851-9fea-d6ea4d269838/pyspark_runner.py\", line 189, in <module>\n",
+       "  File \"/tmp/kernel-PySpark-f816a37e-bcdc-4186-8e76-863d312765fe/pyspark_runner.py\", line 189, in <module>\n",
        "    eval(compiled_code)\n",
        "  File \"<string>\", line 1, in <module>\n",
-       "  File \"<string>\", line 16, in run_experiment2\n",
-       "  File \"<string>\", line 14, in evaluate\n",
-       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/mllib/evaluation.py\", line 279, in accuracy\n",
-       "    return self.call(\"accuracy\")\n",
-       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/mllib/common.py\", line 146, in call\n",
-       "    return callJavaFunc(self._sc, getattr(self._java_model, name), *a)\n",
-       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/mllib/common.py\", line 123, in callJavaFunc\n",
-       "    return _java2py(sc, func(*args))\n",
+       "  File \"<string>\", line 18, in run_experiment\n",
+       "  File \"<string>\", line 21, in fit\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/ml/base.py\", line 64, in fit\n",
+       "    return self._fit(dataset)\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/ml/wrapper.py\", line 236, in _fit\n",
+       "    java_model = self._fit_java(dataset)\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/ml/wrapper.py\", line 233, in _fit_java\n",
+       "    return self._java_obj.fit(dataset._jdf)\n",
        "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/lib/py4j-0.10.4-src.zip/py4j/java_gateway.py\", line 1131, in __call__\n",
        "    answer = self.gateway_client.send_command(command)\n",
        "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/lib/py4j-0.10.4-src.zip/py4j/java_gateway.py\", line 883, in send_command\n",
@@ -527,11 +389,112 @@
        "java.lang.Thread.run(Thread.java:745)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "run_experiment(\"./data/DATA_TFIDFV0_HADM_TOP10\")\n",
+    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP10\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV0_HADM_TOP10\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV1_HADM_TOP10\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV2_HADM_TOP10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
+       "Message: null was reset!\n",
+       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$reset$1.apply(BrokerState.scala:191)\n",
+       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$reset$1.apply(BrokerState.scala:189)\n",
+       "scala.collection.Iterator$class.foreach(Iterator.scala:893)\n",
+       "scala.collection.AbstractIterator.foreach(Iterator.scala:1336)\n",
+       "scala.collection.IterableLike$class.foreach(IterableLike.scala:72)\n",
+       "scala.collection.AbstractIterable.foreach(Iterable.scala:54)\n",
+       "org.apache.toree.interpreter.broker.BrokerState.reset(BrokerState.scala:189)\n",
+       "org.apache.toree.kernel.interpreter.pyspark.PySparkService$$anonfun$pySparkProcess$2.apply(PySparkService.scala:63)\n",
+       "org.apache.toree.kernel.interpreter.pyspark.PySparkService$$anonfun$pySparkProcess$2.apply(PySparkService.scala:61)\n",
+       "org.apache.toree.interpreter.broker.BrokerProcessHandler.onProcessComplete(BrokerProcessHandler.scala:67)\n",
+       "org.apache.commons.exec.DefaultExecutor$1.run(DefaultExecutor.java:201)\n",
+       "java.lang.Thread.run(Thread.java:745)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_experiment2(\"./data/DATA_TFIDFV0_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_TFIDFV1_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV0_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV1_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV2_HADM_TOP10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
+       "Message: Traceback (most recent call last):\n",
+       "  File \"/tmp/kernel-PySpark-f816a37e-bcdc-4186-8e76-863d312765fe/pyspark_runner.py\", line 189, in <module>\n",
+       "    eval(compiled_code)\n",
+       "  File \"<string>\", line 1, in <module>\n",
+       "NameError: name 'run_experiment' is not defined\n",
+       "\n",
+       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "scala.Option.foreach(Option.scala:257)\n",
+       "org.apache.toree.interpreter.broker.BrokerState.markFailure(BrokerState.scala:162)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
+       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
+       "java.lang.reflect.Method.invoke(Method.java:498)\n",
+       "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
+       "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
+       "py4j.Gateway.invoke(Gateway.java:280)\n",
+       "py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
+       "py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
+       "py4j.GatewayConnection.run(GatewayConnection.java:214)\n",
+       "java.lang.Thread.run(Thread.java:745)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_experiment(\"./data/DATA_TFIDFV0_HADM_TOP50\")\n",
+    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP50\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV0_HADM_TOP50\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV1_HADM_TOP50\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV2_HADM_TOP50\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "run_experiment2(\"./data/DATA_WORD2VEC_HADM_TOP50\")\n",
     "run_experiment2(\"./data/DATA_TFIDFV0_HADM_TOP50\")\n",
