ml baseline run

--- a/code/feature_extraction_dl_word2vec.ipynb
+++ b/code/feature_extraction_dl_word2vec.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import pickle\n",
+    "import pickle, cPickle\n",
     "\n",
     "ICD9CODES = pickle.load(open(\"./data/ICD9CODES.p\", \"r\"))\n",
     "ICD9CODES_TOP10 = pickle.load(open(\"./data/ICD9CODES_TOP10.p\", \"r\"))\n",
@@ -356,6 +356,38 @@
     "output_pickle(em, \"./data/EMBMATRIXV1_WORD2VEC_v2_300dim.p\")\n",
     "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_600dim.txt\", remove_stopwords=True)\n",
     "output_pickle(em, \"./data/EMBMATRIXV1_WORD2VEC_v2_600dim.p\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2231687 word vectors.\n",
+      "Found 2231687 word vectors.\n",
+      "Found 2231687 word vectors.\n",
+      "Found 2231687 word vectors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_index = cPickle.load(open(\"./data/DATA_WORDSEQV0_WORDINDEX.p\", \"rb\"))\n",
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/bio_nlp_vec/PubMed-shuffle-win-30.txt\", remove_stopwords=False)\n",
+    "output_pickle(em, \"./data/EMBMATRIXV0_BIONLPVEC_Pubmedshufflewin30F.p\")\n",
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/bio_nlp_vec/PubMed-shuffle-win-2.txt\", remove_stopwords=False)\n",
+    "output_pickle(em, \"./data/EMBMATRIXV0_BIONLPVEC_Pubmedshufflewin02F.p\")\n",
+    "\n",
+    "word_index = cPickle.load(open(\"./data/DATA_WORDSEQV1_WORDINDEX.p\", \"rb\"))\n",
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/bio_nlp_vec/PubMed-shuffle-win-30.txt\", remove_stopwords=False)\n",
+    "output_pickle(em, \"./data/EMBMATRIXV1_BIONLPVEC_Pubmedshufflewin30F.p\")\n",
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/bio_nlp_vec/PubMed-shuffle-win-2.txt\", remove_stopwords=False)\n",
+    "output_pickle(em, \"./data/EMBMATRIXV1_BIONLPVEC_Pubmedshufflewin02F.p\")"
    ]
   },
   {
