ml baseline work in progress

--- a/code/Project_bdfh_word2vec-clean.ipynb
+++ b/code/Project_bdfh_word2vec-clean.ipynb
@@ -108,6 +108,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/docker-user/anaconda2/envs/cse6250/lib/python2.7/site-packages/ipykernel/__main__.py:2: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  from ipykernel import kernelapp as app\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>\"row_id\",\"subject_id\",\"hadm_id\",\"chartdate\",\"category\",\"description\",\"cgid\",\"iserror\",\"text\"</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>776,20007,188442,\"2183-10-29 00:00:00\",\"Discha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>777,20007,193793,\"2184-01-20 00:00:00\",\"Discha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>778,59883,118446,\"2103-04-18 00:00:00\",\"Discha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>779,17043,157985,\"2103-10-11 00:00:00\",\"Discha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>785,7019,189488,\"2131-04-06 00:00:00\",\"Dischar...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  \"row_id\",\"subject_id\",\"hadm_id\",\"chartdate\",\"category\",\"description\",\"cgid\",\"iserror\",\"text\"\n",
+       "0  776,20007,188442,\"2183-10-29 00:00:00\",\"Discha...                                          \n",
+       "1  777,20007,193793,\"2184-01-20 00:00:00\",\"Discha...                                          \n",
+       "2  778,59883,118446,\"2103-04-18 00:00:00\",\"Discha...                                          \n",
+       "3  779,17043,157985,\"2103-10-11 00:00:00\",\"Discha...                                          \n",
+       "4  785,7019,189488,\"2131-04-06 00:00:00\",\"Dischar...                                          "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('./data/NOTEEVENTS-2.csv',sep='delimiter')\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
