--- a/code/feature_extraction_dl_word2vec.ipynb
+++ b/code/feature_extraction_dl_word2vec.ipynb
@@ -34,15 +34,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## WORD2VEC_DL_V0"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -51,10 +44,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "153\n"
      ]
     }
    ],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "print len(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## WORD2VEC_DL_V0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -445,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
