--- a/code/pre-trained_wordvectors_to_keras.ipynb
+++ b/code/pre-trained_wordvectors_to_keras.ipynb
@@ -69,7 +69,8 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -101,67 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
-       "Message: Traceback (most recent call last):\n",
-       "  File \"/tmp/kernel-PySpark-535aabc0-437e-4d6d-b487-1d5bbb2e918d/pyspark_runner.py\", line 189, in <module>\n",
-       "    eval(compiled_code)\n",
-       "  File \"<string>\", line 5, in <module>\n",
-       "  File \"/home/docker-user/anaconda2/envs/cse6250/lib/python2.7/site-packages/pandas/core/series.py\", line 2294, in apply\n",
-       "    mapped = lib.map_infer(values, f, convert=convert_dtype)\n",
-       "  File \"pandas/src/inference.pyx\", line 1207, in pandas.lib.map_infer (pandas/lib.c:66124)\n",
-       "  File \"<string>\", line 3, in preprocessor_word2vec2\n",
-       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/context.py\", line 236, in signal_handler\n",
-       "    raise KeyboardInterrupt()\n",
-       "KeyboardInterrupt\n",
-       "\n",
-       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
-       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
-       "scala.Option.foreach(Option.scala:257)\n",
-       "org.apache.toree.interpreter.broker.BrokerState.markFailure(BrokerState.scala:162)\n",
-       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
-       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
-       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
-       "java.lang.reflect.Method.invoke(Method.java:498)\n",
-       "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
-       "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
-       "py4j.Gateway.invoke(Gateway.java:280)\n",
-       "py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
-       "py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
-       "py4j.GatewayConnection.run(GatewayConnection.java:214)\n",
-       "java.lang.Thread.run(Thread.java:745)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "STOPWORDS_WORD2VEC = stopwords.words('english') + ICD9CODES\n",
-    "\n",
-    "def preprocessor_word2vec2(text):\n",
-    "    text = \" \".join([i for i in text.split() if i not in STOPWORDS_WORD2VEC])\n",
-    "    \n",
-    "    return text\n",
-    "\n",
-    "texts = texts.apply(preprocessor_word2vec2)\n",
-    "\n",
-    "print texts.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -176,16 +120,10 @@
       "text/plain": [
        "Name: org.apache.toree.interpreter.broker.BrokerException\n",
        "Message: Traceback (most recent call last):\n",
-       "  File \"/tmp/kernel-PySpark-535aabc0-437e-4d6d-b487-1d5bbb2e918d/pyspark_runner.py\", line 189, in <module>\n",
+       "  File \"/tmp/kernel-PySpark-156722ca-4076-4e63-9ed5-4caee7d64668/pyspark_runner.py\", line 189, in <module>\n",
        "    eval(compiled_code)\n",
-       "  File \"<string>\", line 18, in <module>\n",
-       "  File \"/home/docker-user/cse6250-final-project/code/keras_text.py\", line 123, in fit_on_texts\n",
-       "    self.stopwords)\n",
-       "  File \"/home/docker-user/cse6250-final-project/code/keras_text.py\", line 41, in text_to_word_sequence\n",
-       "    return [i for i in seq if i not in stopwords]\n",
-       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/context.py\", line 236, in signal_handler\n",
-       "    raise KeyboardInterrupt()\n",
-       "KeyboardInterrupt\n",
+       "  File \"<string>\", line 6, in <module>\n",
+       "NameError: name 'ICD9CODES' is not defined\n",
        "\n",
        "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
        "org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
@@ -204,7 +142,7 @@
        "java.lang.Thread.run(Thread.java:745)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,6 +189,26 @@
     "#print('Shape of data tensor:', data.shape)\n",
     "#print('Shape of label tensor:', labels.shape)\n",
     "print time.time() - t0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "STOPWORDS_WORD2VEC = stopwords.words('english') + ICD9CODES\n",
+    "\n",
+    "def preprocessor_word2vec2(text):\n",
+    "    text = \" \".join([i for i in text.split() if i not in STOPWORDS_WORD2VEC])\n",
+    "    \n",
+    "    return text\n",
+    "\n",
+    "texts = texts.apply(preprocessor_word2vec2)\n",
+    "\n",
+    "print texts.head()"
    ]
   },
   {
