--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -533,16 +533,220 @@
       "./data/DATA_TFIDFV0_HADM_TOP50\n",
       "Train, Test: 26363 13182\n",
       "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
-      "5 & 0.1811 & 0.0392 & 0.0476 & 0.9155 & 0.0790 & 0.1350 & 0.0362 & 0.0438 & 0.9146 & 0.0765 \\\\ \\hline\n"
+      "5 & 0.1811 & 0.0392 & 0.0476 & 0.9155 & 0.0790 & 0.1350 & 0.0362 & 0.0438 & 0.9146 & 0.0765 \\\\ \\hline\n",
+      "10 & 0.7685 & 0.0854 & 0.1034 & 0.9213 & 0.1068 & 0.2690 & 0.0644 & 0.0723 & 0.9175 & 0.0864 \\\\ \\hline\n",
+      "20 & 0.9976 & 0.2087 & 0.2874 & 0.9375 & 0.1515 & 0.4207 & 0.0818 & 0.0965 & 0.9201 & 0.0904 \\\\ \\hline\n",
+      "./data/DATA_TFIDFV1_HADM_TOP50\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.1999 & 0.0548 & 0.0640 & 0.9174 & 0.0858 & 0.1679 & 0.0512 & 0.0596 & 0.9165 & 0.0817 \\\\ \\hline\n",
+      "10 & 0.8084 & 0.1037 & 0.1293 & 0.9242 & 0.1148 & 0.2942 & 0.0745 & 0.0857 & 0.9195 & 0.0885 \\\\ \\hline\n",
+      "20 & 0.9985 & 0.2852 & 0.3866 & 0.9451 & 0.1762 & 0.5377 & 0.0953 & 0.1155 & 0.9220 & 0.0928 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV0_HADM_TOP50\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.1586 & 0.0714 & 0.0733 & 0.9180 & 0.0883 & 0.1603 & 0.0684 & 0.0705 & 0.9172 & 0.0854 \\\\ \\hline\n",
+      "10 & 0.9809 & 0.1552 & 0.2068 & 0.9291 & 0.1311 & 0.3749 & 0.0843 & 0.0968 & 0.9190 & 0.0861 \\\\ \\hline\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
+       "Message: null was reset!\n",
+       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$reset$1.apply(BrokerState.scala:191)\n",
+       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$reset$1.apply(BrokerState.scala:189)\n",
+       "scala.collection.Iterator$class.foreach(Iterator.scala:893)\n",
+       "scala.collection.AbstractIterator.foreach(Iterator.scala:1336)\n",
+       "scala.collection.IterableLike$class.foreach(IterableLike.scala:72)\n",
+       "scala.collection.AbstractIterable.foreach(Iterable.scala:54)\n",
+       "org.apache.toree.interpreter.broker.BrokerState.reset(BrokerState.scala:189)\n",
+       "org.apache.toree.kernel.interpreter.pyspark.PySparkService$$anonfun$pySparkProcess$2.apply(PySparkService.scala:63)\n",
+       "org.apache.toree.kernel.interpreter.pyspark.PySparkService$$anonfun$pySparkProcess$2.apply(PySparkService.scala:61)\n",
+       "org.apache.toree.interpreter.broker.BrokerProcessHandler.onProcessFailed(BrokerProcessHandler.scala:60)\n",
+       "org.apache.commons.exec.DefaultExecutor$1.run(DefaultExecutor.java:203)\n",
+       "java.lang.Thread.run(Thread.java:745)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "run_experiment2(\"./data/DATA_TFIDFV0_HADM_TOP50\", depths=[5, 10, 20])\n",
     "run_experiment2(\"./data/DATA_TFIDFV1_HADM_TOP50\", depths=[5, 10, 20])\n",
-    "run_experiment2(\"./data/DATA_WORD2VECV0_HADM_TOP50\", depths=[5, 10, 20])\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV0_HADM_TOP50\", depths=[5, 10, 20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_WORD2VECV0_HADM_TOP50\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "20 & 0.9994 & 0.9222 & 0.9587 & 0.9944 & 0.8512 & 0.4048 & 0.0938 & 0.1137 & 0.9186 & 0.0833 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV1_HADM_TOP50\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.1775 & 0.0719 & 0.0741 & 0.9181 & 0.0903 & 0.1271 & 0.0671 & 0.0694 & 0.9172 & 0.0843 \\\\ \\hline\n",
+      "10 & 0.9841 & 0.1731 & 0.2336 & 0.9313 & 0.1379 & 0.2982 & 0.0849 & 0.0972 & 0.9190 & 0.0870 \\\\ \\hline\n",
+      "20 & 0.9992 & 0.9239 & 0.9595 & 0.9946 & 0.8503 & 0.4097 & 0.0922 & 0.1117 & 0.9186 & 0.0838 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV2_HADM_TOP50\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.1625 & 0.0736 & 0.0767 & 0.9184 & 0.0909 & 0.1493 & 0.0688 & 0.0720 & 0.9175 & 0.0869 \\\\ \\hline\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_experiment2(\"./data/DATA_WORD2VECV0_HADM_TOP50\", depths=[20])\n",
     "run_experiment2(\"./data/DATA_WORD2VECV1_HADM_TOP50\", depths=[5, 10, 20])\n",
-    "run_experiment2(\"./data/DATA_WORD2VECV2_HADM_TOP50\", depths=[5, 10, 20])"
+    "run_experiment2(\"./data/DATA_WORD2VECV2_HADM_TOP50\", depths=[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "run_experiment2(\"./data/DATA_WORD2VECV2_HADM_TOP50\", depths=[10, 20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_TFIDFV0_HADM_TOP10CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.9040 & 0.5829 & 0.7063 & 0.8697 & 0.3606 & 0.7299 & 0.4057 & 0.5188 & 0.7958 & 0.1996 \\\\ \\hline\n",
+      "10 & 0.9770 & 0.9354 & 0.9557 & 0.9760 & 0.8411 & 0.6444 & 0.5399 & 0.5869 & 0.7922 & 0.1831 \\\\ \\hline\n",
+      "25 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5948 & 0.5505 & 0.5715 & 0.7733 & 0.1568 \\\\ \\hline\n",
+      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5900 & 0.5488 & 0.5682 & 0.7716 & 0.1546 \\\\ \\hline\n",
+      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5900 & 0.5488 & 0.5682 & 0.7716 & 0.1546 \\\\ \\hline\n",
+      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5900 & 0.5488 & 0.5682 & 0.7716 & 0.1546 \\\\ \\hline\n",
+      "./data/DATA_TFIDFV1_HADM_TOP10CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.8451 & 0.6144 & 0.7082 & 0.8663 & 0.3091 & 0.7317 & 0.4859 & 0.5807 & 0.8116 & 0.2161 \\\\ \\hline\n",
+      "10 & 0.9437 & 0.9309 & 0.9372 & 0.9652 & 0.7276 & 0.6458 & 0.5856 & 0.6141 & 0.7994 & 0.1896 \\\\ \\hline\n",
+      "25 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.9998 & 0.5875 & 0.5681 & 0.5776 & 0.7724 & 0.1536 \\\\ \\hline\n",
+      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5845 & 0.5672 & 0.5757 & 0.7708 & 0.1503 \\\\ \\hline\n",
+      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5845 & 0.5672 & 0.5757 & 0.7708 & 0.1503 \\\\ \\hline\n",
+      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5845 & 0.5672 & 0.5757 & 0.7708 & 0.1503 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV0_HADM_TOP10CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.6232 & 0.3537 & 0.4405 & 0.7687 & 0.1668 & 0.6234 & 0.3532 & 0.4381 & 0.7662 & 0.1680 \\\\ \\hline\n",
+      "10 & 0.6629 & 0.4032 & 0.4942 & 0.7845 & 0.1767 & 0.6611 & 0.3989 & 0.4894 & 0.7811 & 0.1752 \\\\ \\hline\n",
+      "25 & 0.6761 & 0.4303 & 0.5194 & 0.7917 & 0.1849 & 0.6718 & 0.4251 & 0.5140 & 0.7876 & 0.1814 \\\\ \\hline\n",
+      "50 & 0.6787 & 0.4317 & 0.5213 & 0.7927 & 0.1867 & 0.6733 & 0.4250 & 0.5144 & 0.7882 & 0.1842 \\\\ \\hline\n",
+      "75 & 0.6789 & 0.4318 & 0.5215 & 0.7928 & 0.1864 & 0.6726 & 0.4251 & 0.5141 & 0.7880 & 0.1837 \\\\ \\hline\n",
+      "100 & 0.6784 & 0.4317 & 0.5212 & 0.7926 & 0.1864 & 0.6731 & 0.4254 & 0.5146 & 0.7882 & 0.1837 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV1_HADM_TOP10CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.6413 & 0.3315 & 0.4225 & 0.7699 & 0.1692 & 0.6430 & 0.3295 & 0.4189 & 0.7670 & 0.1713 \\\\ \\hline\n",
+      "10 & 0.6815 & 0.4382 & 0.5271 & 0.7939 & 0.1850 & 0.6787 & 0.4313 & 0.5202 & 0.7894 & 0.1821 \\\\ \\hline\n",
+      "25 & 0.7135 & 0.4956 & 0.5800 & 0.8114 & 0.2074 & 0.7052 & 0.4814 & 0.5669 & 0.8049 & 0.2033 \\\\ \\hline\n",
+      "50 & 0.7224 & 0.5092 & 0.5926 & 0.8161 & 0.2144 & 0.7056 & 0.4914 & 0.5743 & 0.8069 & 0.2046 \\\\ \\hline\n",
+      "75 & 0.7244 & 0.5108 & 0.5946 & 0.8168 & 0.2160 & 0.7055 & 0.4913 & 0.5743 & 0.8069 & 0.2056 \\\\ \\hline\n",
+      "100 & 0.7243 & 0.5103 & 0.5940 & 0.8168 & 0.2159 & 0.7048 & 0.4899 & 0.5732 & 0.8065 & 0.2044 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV2_HADM_TOP10CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.6448 & 0.3142 & 0.4054 & 0.7693 & 0.1695 & 0.6509 & 0.3134 & 0.4036 & 0.7665 & 0.1722 \\\\ \\hline\n",
+      "10 & 0.6870 & 0.4507 & 0.5386 & 0.7970 & 0.1878 & 0.6815 & 0.4423 & 0.5301 & 0.7919 & 0.1843 \\\\ \\hline\n",
+      "25 & 0.7295 & 0.5266 & 0.6075 & 0.8212 & 0.2229 & 0.7193 & 0.5084 & 0.5912 & 0.8132 & 0.2130 \\\\ \\hline\n",
+      "50 & 0.7477 & 0.5458 & 0.6270 & 0.8294 & 0.2366 & 0.7233 & 0.5222 & 0.6024 & 0.8172 & 0.2201 \\\\ \\hline\n",
+      "75 & 0.7503 & 0.5543 & 0.6338 & 0.8316 & 0.2405 & 0.7221 & 0.5281 & 0.6064 & 0.8178 & 0.2217 \\\\ \\hline\n",
+      "100 & 0.7511 & 0.5567 & 0.6360 & 0.8322 & 0.2401 & 0.7205 & 0.5305 & 0.6077 & 0.8178 & 0.2211 \\\\ \\hline\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_experiment(\"./data/DATA_TFIDFV0_HADM_TOP10CAT\")\n",
+    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP10CAT\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV0_HADM_TOP10CAT\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV1_HADM_TOP10CAT\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV2_HADM_TOP10CAT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_TFIDFV0_HADM_TOP10CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.9397 & 0.0415 & 0.0772 & 0.7383 & 0.1567 & 0.9034 & 0.0371 & 0.0691 & 0.7340 & 0.1610 \\\\ \\hline\n",
+      "10 & 0.9624 & 0.2112 & 0.3363 & 0.7830 & 0.1891 & 0.8200 & 0.1442 & 0.2337 & 0.7577 & 0.1710 \\\\ \\hline\n",
+      "20 & 0.9909 & 0.5356 & 0.6904 & 0.8735 & 0.4016 & 0.7706 & 0.2590 & 0.3766 & 0.7784 & 0.1859 \\\\ \\hline\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_experiment2(\"./data/DATA_TFIDFV0_HADM_TOP10CAT\")\n",
+    "run_experiment2(\"./data/DATA_TFIDFV1_HADM_TOP10CAT\")\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV0_HADM_TOP10CAT\")\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV1_HADM_TOP10CAT\")\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV2_HADM_TOP10CAT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "run_experiment(\"./data/DATA_TFIDFV0_HADM_TOP50CAT\")\n",
+    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP50CAT\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV0_HADM_TOP50CAT\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV1_HADM_TOP50CAT\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV2_HADM_TOP50CAT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "run_experiment2(\"./data/DATA_TFIDFV0_HADM_TOP50CAT\", depths=[5, 10, 20])\n",
+    "run_experiment2(\"./data/DATA_TFIDFV1_HADM_TOP50CAT\", depths=[5, 10, 20])\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV0_HADM_TOP50CAT\", depths=[5, 10, 20])\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV1_HADM_TOP50CAT\", depths=[5, 10, 20])\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV2_HADM_TOP50CAT\", depths=[5, 10, 20])"
    ]
   },
   {
